tests/purs/failing/ExtraneousClassMember.out
Error found:
at tests/purs/failing/ExtraneousClassMember.purs:11:3 - 11:10 (line 11, column 3 - line 11, column 10)

  [33mb[0m is not a member of type class [33mMain.A[0m

in type class instance
[33m               [0m
[33m  Main.A String[0m
[33m               [0m

See https://github.com/purescript/documentation/blob/master/errors/ExtraneousClassMember.md for more information,
or to contribute content related to this error.

